# submillisecond-live-view

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  for-loop-example.json  liveview-debug.js
examples/: README.md  basic.rs  clock.html  clock.rs  counter.html  counter.rs  list.html  list.rs  todos.html  todos.rs
serde_json_strings/: Cargo.toml
serde_json_strings/src/: lib.rs
src/: change_detection.rs  csrf.rs  event_handler.rs  handler.rs  head.rs  lib.rs  live_view.rs  manager.rs  maud.rs  rendered.rs  socket.rs  template.rs  tera.rs
src/rendered/: builder.rs  builder_new.rs  diff.rs  dynamic.rs  strip.rs
src/tera/: json.rs  rendered.rs  rendered_json.rs
static/: clock.css  counter.css  main.js  todos.css
templates/: counter.html  foo.html  index.html  layout.html  todos.html
tests/: diff.rs  rendered.rs
web/: main.js  package-lock.json  package.json  rollup.config.js  topbar.js
