[package]
name = "submillisecond-live-view"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
const-random = "0.1"
enumflags2 = "0.7"
hmac = { version = "0.12.1", features = ["std"] }
itertools = "0.10"
jwt = "0.16.0"
lunatic = { version = "0.11.4", features = ["json_serializer"] }
lunatic-log = "0.2"
maud_live_view = { path = "./crates/maud_live_view/maud_live_view" }
pretty_assertions = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10"
sha2 = "0.10.6"
slotmap = "1.0"
submillisecond = { version = "0.2.0-beta0", features = [
  "cookies",
  "websocket",
] }
thiserror = "1.0"
tungstenite = "0.17"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }

[features]
default = ["liveview_js"]
liveview_js = []

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]
