[package]
name = "submillisecond-live-view"
version = "0.4.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A LiveView implementation for the submillisecond web framework."
repository = "https://github.com/lunatic-solutions/submillisecond-live-view"

[dependencies]
base64 = "0.21"
const-random = "0.1"
enumflags2 = "0.7"
hmac = { version = "0.12.1", features = ["std"] }
itertools = "0.10"
jwt = "0.16.0"
lunatic = { version = "0.13", features = ["json_serializer"] }
lunatic-log = "0.4"
maud-live-view = "0.24.3"
nipper = "0.1"
pretty_assertions = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
sha2 = "0.10.6"
slotmap = "1.0"
submillisecond = { version = "0.4.0", features = ["cookies", "websocket"] }
thiserror = "1.0"
tungstenite = "0.19"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }

[features]
default = ["liveview_js"]
liveview_js = []

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]
